--- a/Proyecto/Front/Pediatria.html
+++ b/Proyecto/Front/Pediatria.html
@@ -10,7 +10,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="Servicios.css" />
+    <link rel="stylesheet" href="Style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -57,29 +57,37 @@
       </div>
     </nav>
 
-    <section class="ImgBannerServicios">
-      <img
-        src="img/imgServicios/ImgBanner.webp"
-        alt="ImgBannerServicios"
-        class="img-Banner"
-      />
-    </section>
-
     <section class="pediatria-heredia">
-      <div class="container">
-        <h1 class="text-center">Somos los líderes en Pediatría en Heredia.</h1>
+      <div class="hero-section">
+        <h1 class="text-center">Somos los líderes en Pediatría en Heredia</h1>
+        <p class="breadcrumb">Home > Servicios > Pediatría en Heredia</p>
+      </div>
 
-        <div class="mission text-center">
-          <p class="uppercase">
+      <div class="features-section">
+        <div class="feature">
+          <i class="icon-experience"></i>
+          <h3>Experiencia y Pasión</h3>
+          <p>
             Procuramos el bienestar de las y los pequeñines, atendemos con
-            pasión, paciencia y entrega para brindarle a la familia un servicio
-            excepcional.
+            pasión, paciencia y entrega.
           </p>
         </div>
+        <div class="feature">
+          <i class="icon-consultation"></i>
+          <h3>Servicio Excepcional</h3>
+          <p>Brindamos a la familia un servicio excepcional en cada visita.</p>
+        </div>
+        <div class="feature">
+          <i class="icon-guarantee"></i>
+          <h3>Seguros Médicos</h3>
+          <p>Aceptamos todos los seguros médicos del país para su comodidad.</p>
+        </div>
+      </div>
 
-        <div class="que-es-pediatria">
-          <h2 class="text-center TituloPediatria">¿Qué es la Pediatría?</h2>
-          <p class="text-center">
+      <div class="about-service">
+        <div class="content">
+          <h2>¿Qué es la Pediatría?</h2>
+          <p>
             A la Pediatría le incumbe todo cuanto se refiere a los cuidados del
             niño y adolescente sano (Pediatría Preventiva), a los modos de
             asistencia médica integral, total y continuada en el niño y el
@@ -89,53 +97,33 @@
             de manera ininterrumpida y con características propias se desarrolla
             (Pediatría Social).
           </p>
+          <a href="#" class="btn-learn-more">Aprende más</a>
         </div>
-
-        <div class="seguros text-center">
-          <p class="uppercase">Aceptamos todos los seguros médicos del país</p>
+        <div class="image">
+          <img
+            src="img/imgServicios/imgServicio2.jpg"
+            alt="Pediatra atendiendo a un paciente"
+            class="imgPediatria"
+          />
         </div>
+      </div>
 
-        <h2 class="text-center">Pediatría en Heredia</h2>
-
-        <div class="servicios-imagenes">
-          <div class="row">
-            <div class="col">
-              <img
-                src="path/to/icon-image-1.jpg"
-                alt="Iconos médicos"
-                class="img-fluid"
-              />
-            </div>
-            <div class="col">
-              <img
-                src="path/to/doctor-baby-image.jpg"
-                alt="Doctor examinando bebé"
-                class="img-fluid"
-              />
-            </div>
-            <div class="col">
-              <img
-                src="path/to/doctor-child-icon.jpg"
-                alt="Icono de doctor y niño"
-                class="img-fluid"
-              />
-            </div>
-            <div class="col">
-              <img
-                src="path/to/medical-items-pattern.jpg"
-                alt="Patrón de artículos médicos"
-                class="img-fluid"
-              />
-            </div>
-            <div class="col">
-              <img
-                src="path/to/baby-stethoscope.jpg"
-                alt="Bebé con estetoscopio"
-                class="img-fluid"
-              />
-            </div>
-          </div>
-        </div>
+      <div class="when-to-visit">
+        <h2>¿Cuándo debo ir al Pediatra?</h2>
+        <p>
+          Los niños y las niñas tienen controles de salud con mayor frecuencia
+          cuando son más jóvenes que cuando son adolescentes. Esto se debe a que
+          el desarrollo es más rápido durante estos años. Cada control con el
+          pediatra incluye un examen físico completo, donde se verifica el
+          crecimiento y desarrollo del bebé o del niño o niña y el adolescente
+          con el fin de encontrar o prevenir problemas.
+        </p>
+        <p>
+          Asimismo, la valoración de estudios de la audición y la visión y otros
+          exámenes serán parte de algunas de las consultas o controles. Incluso,
+          si su hijo o hija está saludable, los controles con el pediatra son un
+          buen momento para enfocarse en su bienestar integral.
+        </p>
       </div>
     </section>
     <script>
