--- a/Proyecto/Front/Pediatria.html
+++ b/Proyecto/Front/Pediatria.html
@@ -56,74 +56,134 @@
         </div>
       </div>
     </nav>
+    <div class="container">
+      <section class="TituloSeccionPediatria">
+        <h1>Líderes en Pediatría en Heredia</h1>
+        <p>
+          Cuidado especializado y apasionado para nuestros pequeños pacientes
+        </p>
+      </section>
 
-    <section class="pediatria-heredia">
-      <div class="hero-section">
-        <h1 class="text-center">Somos los líderes en Pediatría en Heredia</h1>
-        <p class="breadcrumb">Home > Servicios > Pediatría en Heredia</p>
-      </div>
-
-      <div class="features-section">
-        <div class="feature">
-          <i class="icon-experience"></i>
-          <h3>Experiencia y Pasión</h3>
+      <section class="InformacionPediatria">
+        <div class="ContenidoPediatria">
+          <h2>Nuestros Servicios Pediátricos</h2>
           <p>
-            Procuramos el bienestar de las y los pequeñines, atendemos con
-            pasión, paciencia y entrega.
+            En nuestra clínica, nos dedicamos al bienestar integral de niños y
+            adolescentes, desde la prevención hasta el tratamiento de
+            enfermedades. Nuestro equipo de pediatras ofrece:
+          </p>
+          <ul>
+            <li>Controles de salud regulares</li>
+            <li>Atención médica integral</li>
+            <li>Evaluación del crecimiento y desarrollo</li>
+            <li>Manejo de enfermedades comunes</li>
+            <li>Detección temprana de trastornos del desarrollo</li>
+          </ul>
+          <p>
+            <strong
+              >Aceptamos todos los seguros médicos del país para su
+              comodidad.</strong
+            >
           </p>
         </div>
-        <div class="feature">
-          <i class="icon-consultation"></i>
-          <h3>Servicio Excepcional</h3>
-          <p>Brindamos a la familia un servicio excepcional en cada visita.</p>
-        </div>
-        <div class="feature">
-          <i class="icon-guarantee"></i>
-          <h3>Seguros Médicos</h3>
-          <p>Aceptamos todos los seguros médicos del país para su comodidad.</p>
+      </section>
+
+<section class="CarouselPediatria">
+  <div id="pediatriaCarousel" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="img/pediatriaCarusel1.webp" class="d-block w-100" alt="Pediatra examinando a un niño" />
+      </div>
+      <div class="carousel-item">
+        <img src="img/pediatriaCarusel2.jpg" class="d-block w-100" alt="Sala de espera pediátrica" />
+      </div>
+      <div class="carousel-item">
+        <img src="img/pediatriaCarusel3.jpg" class="d-block w-100" alt="Niño recibiendo vacuna" />
+      </div>
+    </div>
+    <button class="carousel-control-prev custom-control" type="button" data-bs-target="#pediatriaCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Anterior</span>
+    </button>
+    <button class="carousel-control-next custom-control" type="button" data-bs-target="#pediatriaCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Siguiente</span>
+    </button>
+  </div>
+</section>
+
+    </div>
+    <section class="agendar-cita">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-6">
+            <h2>¿Necesita agendar una cita?</h2>
+            <p>
+              Use nuestro sistema en línea para programar su próxima visita con
+              nosotros.
+            </p>
+          </div>
+          <div class="col-md-6 text-center">
+            <a href="index.php" class="btn btnAgendar">Agendar Ahora</a>
+          </div>
         </div>
       </div>
-
-      <div class="about-service">
-        <div class="content">
-          <h2>¿Qué es la Pediatría?</h2>
-          <p>
-            A la Pediatría le incumbe todo cuanto se refiere a los cuidados del
-            niño y adolescente sano (Pediatría Preventiva), a los modos de
-            asistencia médica integral, total y continuada en el niño y el
-            adolescente en estado de enfermedad (Pediatría Clínica), y a cuanto
-            atañe al niño y adolescente sano y enfermo en sus interrelaciones
-            individuales y con la comunidad en el medio físico y humano en que
-            de manera ininterrumpida y con características propias se desarrolla
-            (Pediatría Social).
-          </p>
-          <a href="#" class="btn-learn-more">Aprende más</a>
+    </section>
+    <section id="SeccionTestimonios" class="SeccionTestimonios text-white">
+      <div class="container">
+        <h2 class="tituloTestimonios text-center mb-5">
+          Lo que Dicen Nuestros Pacientes
+        </h2>
+        <div class="row justify-content-center">
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="testimonial text-center">
+              <img
+                src="img/imgTestimonios/ImgTestimonios01.jpg"
+                alt="Patient 1"
+                class="rounded-circle mb-3"
+                width="100"
+              />
+              <p class="mb-3">
+                "I urgently required dental help last 4th of July. And despite
+                all other clinics being closed, BeDentist took my appointment!"
+              </p>
+              <h5>Herbert Wallace</h5>
+              <small class="text-muted">May 10, 2018</small>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="testimonial text-center">
+              <img
+                src="img/imgTestimonios/ImgTestimonios02.jpg"
+                alt="Patient 2"
+                class="rounded-circle mb-3"
+                width="100"
+              />
+              <p class="mb-3">
+                "Comparing teeth whitening prices here and elsewhere, I picked
+                BeDentist. The result was beyond my expectations!"
+              </p>
+              <h5>Gary Growles</h5>
+              <small class="text-muted">May 10, 2018</small>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="testimonial text-center">
+              <img
+                src="img/imgTestimonios/ImgTestimonios03.webp"
+                alt="Patient 3"
+                class="rounded-circle mb-3"
+                width="100"
+              />
+              <p class="mb-3">
+                "Taking my kids to a dentist has never been easier. They just
+                loved the welcoming and warm atmosphere in there!"
+              </p>
+              <h5>Daniela Robbery</h5>
+              <small class="text-muted">May 10, 2018</small>
+            </div>
+          </div>
         </div>
-        <div class="image">
-          <img
-            src="img/imgServicios/imgServicio2.jpg"
-            alt="Pediatra atendiendo a un paciente"
-            class="imgPediatria"
-          />
-        </div>
-      </div>
-
-      <div class="when-to-visit">
-        <h2>¿Cuándo debo ir al Pediatra?</h2>
-        <p>
-          Los niños y las niñas tienen controles de salud con mayor frecuencia
-          cuando son más jóvenes que cuando son adolescentes. Esto se debe a que
-          el desarrollo es más rápido durante estos años. Cada control con el
-          pediatra incluye un examen físico completo, donde se verifica el
-          crecimiento y desarrollo del bebé o del niño o niña y el adolescente
-          con el fin de encontrar o prevenir problemas.
-        </p>
-        <p>
-          Asimismo, la valoración de estudios de la audición y la visión y otros
-          exámenes serán parte de algunas de las consultas o controles. Incluso,
-          si su hijo o hija está saludable, los controles con el pediatra son un
-          buen momento para enfocarse en su bienestar integral.
-        </p>
       </div>
     </section>
     <script>
