ajustes en la parte de servicios, agrego de footer y de fotos

--- a/Proyecto/Front/Pediatria.html
+++ b/Proyecto/Front/Pediatria.html
@@ -30,19 +30,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="Index.php">Inicio</a>
+              <a class="nav-link" href="#">Inicio</a>
             </li>
             <li class="nav-item mx-4">
               <a class="nav-link" href="#">Acerca de Nosotros</a>
             </li>
             <li class="nav-item mx-4">
-              <a class="nav-link" href="PaginaServicios.html">Servicios</a>
+              <a class="nav-link" href="PaginaServicios.php">Servicios</a>
             </li>
             <li class="nav-item mx-4">
               <a class="nav-link" href="#">Contacto</a>
-            </li>
-            <li class="nav-item mx-4">
-              <a class="nav-link" href="#">Contacts</a>
             </li>
             <li class="nav-item mx-4">
               <a class="nav-link" href="#">Pages</a>
@@ -56,62 +53,91 @@
         </div>
       </div>
     </nav>
-    <div class="container">
-      <section class="TituloSeccionPediatria">
-        <h1>Líderes en Pediatría en Heredia</h1>
-        <p>
-          Cuidado especializado y apasionado para nuestros pequeños pacientes
-        </p>
-      </section>
 
-      <section class="InformacionPediatria">
-        <div class="ContenidoPediatria">
-          <h2>Nuestros Servicios Pediátricos</h2>
+    <div class="container">
+      <section class="row seccionPrincipalServicios">
+        <div class="TituloSeccionPediatria col-md-6">
+          <h1>Líderes en Pediatría en Heredia</h1>
           <p>
-            En nuestra clínica, nos dedicamos al bienestar integral de niños y
-            adolescentes, desde la prevención hasta el tratamiento de
-            enfermedades. Nuestro equipo de pediatras ofrece:
+            Procuramos el bienestar de las y los pequeñines, atendemos con
+            pasión, paciencia y entrega para brindarle a la familia un servicio
+            excepcional.
           </p>
-          <ul>
-            <li>Controles de salud regulares</li>
-            <li>Atención médica integral</li>
-            <li>Evaluación del crecimiento y desarrollo</li>
-            <li>Manejo de enfermedades comunes</li>
-            <li>Detección temprana de trastornos del desarrollo</li>
-          </ul>
-          <p>
-            <strong
-              >Aceptamos todos los seguros médicos del país para su
-              comodidad.</strong
-            >
-          </p>
+        </div>
+
+        <div class="InformacionPediatria col-md-6">
+          <div class="ContenidoPediatria">
+            <h2>Nuestros Servicios Pediátricos</h2>
+            <p>
+              En nuestra clínica, nos dedicamos al bienestar integral de niños y
+              adolescentes, desde la prevención hasta el tratamiento de
+              enfermedades. Nuestro equipo de pediatras ofrece:
+            </p>
+            <ul>
+              <li>Controles de salud regulares</li>
+              <li>Atención médica integral</li>
+              <li>Evaluación del crecimiento y desarrollo</li>
+              <li>Manejo de enfermedades comunes</li>
+              <li>Detección temprana de trastornos del desarrollo</li>
+            </ul>
+            <p>
+              <strong>
+                Aceptamos todos los seguros médicos del país para su comodidad.
+              </strong>
+            </p>
+          </div>
         </div>
       </section>
 
-<section class="CarouselPediatria">
-  <div id="pediatriaCarousel" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="img/pediatriaCarusel1.webp" class="d-block w-100" alt="Pediatra examinando a un niño" />
-      </div>
-      <div class="carousel-item">
-        <img src="img/pediatriaCarusel2.jpg" class="d-block w-100" alt="Sala de espera pediátrica" />
-      </div>
-      <div class="carousel-item">
-        <img src="img/pediatriaCarusel3.jpg" class="d-block w-100" alt="Niño recibiendo vacuna" />
-      </div>
-    </div>
-    <button class="carousel-control-prev custom-control" type="button" data-bs-target="#pediatriaCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Anterior</span>
-    </button>
-    <button class="carousel-control-next custom-control" type="button" data-bs-target="#pediatriaCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Siguiente</span>
-    </button>
-  </div>
-</section>
-
+      <section class="CarouselPediatria">
+        <div
+          id="pediatriaCarousel"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="img/pediatriaCarusel1.webp"
+                class="d-block w-100"
+                alt="Pediatra examinando a un niño"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="img/pediatriaCarusel2.jpg"
+                class="d-block w-100"
+                alt="Sala de espera pediátrica"
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="img/pediatriaCarusel3.jpg"
+                class="d-block w-100"
+                alt="Niño recibiendo vacuna"
+              />
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev custom-control"
+            type="button"
+            data-bs-target="#pediatriaCarousel"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Anterior</span>
+          </button>
+          <button
+            class="carousel-control-next custom-control"
+            type="button"
+            data-bs-target="#pediatriaCarousel"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Siguiente</span>
+          </button>
+        </div>
+      </section>
     </div>
     <section class="agendar-cita">
       <div class="container">
@@ -129,63 +155,92 @@
         </div>
       </div>
     </section>
-    <section id="SeccionTestimonios" class="SeccionTestimonios text-white">
+        <section id="SeccionBienvenida" class="SeccionBienvenida py-4">
       <div class="container">
-        <h2 class="tituloTestimonios text-center mb-5">
-          Lo que Dicen Nuestros Pacientes
-        </h2>
-        <div class="row justify-content-center">
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="testimonial text-center">
-              <img
-                src="img/imgTestimonios/ImgTestimonios01.jpg"
-                alt="Patient 1"
-                class="rounded-circle mb-3"
-                width="100"
-              />
-              <p class="mb-3">
-                "I urgently required dental help last 4th of July. And despite
-                all other clinics being closed, BeDentist took my appointment!"
-              </p>
-              <h5>Herbert Wallace</h5>
-              <small class="text-muted">May 10, 2018</small>
-            </div>
+        <div class="row align-items-center">
+          <div
+            class="col-lg-6 col-md-12 mb-4 mb-lg-0 d-flex justify-content-center"
+          >
+            <img
+              src="img/imgBienvenida.jpg"
+              alt="Dentist in clinic"
+              class="bienvenida rounded img-fluid"
+            />
           </div>
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="testimonial text-center">
-              <img
-                src="img/imgTestimonios/ImgTestimonios02.jpg"
-                alt="Patient 2"
-                class="rounded-circle mb-3"
-                width="100"
-              />
-              <p class="mb-3">
-                "Comparing teeth whitening prices here and elsewhere, I picked
-                BeDentist. The result was beyond my expectations!"
-              </p>
-              <h5>Gary Growles</h5>
-              <small class="text-muted">May 10, 2018</small>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="testimonial text-center">
-              <img
-                src="img/imgTestimonios/ImgTestimonios03.webp"
-                alt="Patient 3"
-                class="rounded-circle mb-3"
-                width="100"
-              />
-              <p class="mb-3">
-                "Taking my kids to a dentist has never been easier. They just
-                loved the welcoming and warm atmosphere in there!"
-              </p>
-              <h5>Daniela Robbery</h5>
-              <small class="text-muted">May 10, 2018</small>
+          <div class="col-lg-6 col-md-12">
+            <h2 class="TituloSeccionBienvenida">Clinica VivirBien</h2>
+            <h3 class="SubtituloSeccionBienvenida">
+              Dental clinic BeDentist welcomes you!
+            </h3>
+
+            <p>
+              Profesionales en salud en Heredia capacitados para brindarle la
+              ayuda que usted necesita y a la vez apoyarlo en todo el proceso
+              del tratamiento, pues lo importante para nosotros es lograr ese
+              anhelado Bienestar, que solo se logra con cambios positivos y
+              actitudes proactivas en nuestras vidas.
+            </p>
+            <div class="ContenedorBtn">
+              <button class="btnSeccionBienvenida">Leer más</button>
             </div>
           </div>
         </div>
       </div>
     </section>
+    <footer class="site-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <h2 class="footer-logo">Clinica perteneser</h2>
+            <p>
+              Profesionales en salud en Heredia capacitados para brindarle la
+              ayuda que usted necesita y a la vez apoyarlo en todo el proceso
+              del tratamiento, pues lo importante para nosotros es lograr ese
+              anhelado Bienestar, que solo se logra con cambios positivos y
+              actitudes proactivas en nuestras vidas.
+            </p>
+          </div>
+          <div class="col-md-3">
+            <h3>Nuestros Servicios</h3>
+            <ul class="footer-services">
+              <li><a href="#">Pediatría</a></li>
+              <li><a href="#">Psiquiatría</a></li>
+              <li><a href="#">Ortopedia</a></li>
+              <li><a href="#">Urologia</a></li>
+              <li><a href="PaginaServicios.php">Más servicios</a></li>
+            </ul>
+          </div>
+          <div class="col-md-3">
+            <h3>Horario de Visita</h3>
+            <p>
+              <i class="fas fa-clock"></i> Lunes–Viernes: 8am – 8pm<br />
+              Sabados: 7am – 5pm<br />
+              Domingos: Cerrados
+            </p>
+          </div>
+          <div class="col-md-3">
+            <h3>Informacion Contacto</h3>
+            <p><i class="fas fa-phone"></i> 43500759</p>
+            <p><i class="fas fa-envelope"></i> info@perteneser.com</p>
+            <p>
+              <i class="fas fa-map-marker-alt"></i>Plaza Torres de Heredia
+              Frente a Zona Franca Metropolitana Ulloa, Heredia. Costa Rica
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <div class="footer-bottom">
+      <div class="container">
+        <p>&copy; Todos los derechos reservados 2024</p>
+        <div class="social-icons">
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-whatsapp"></i></a>
+        </div>
+      </div>
+    </div>
     <script>
       src = "Scripts.js";
     </script>
