Cambio de nombres

--- a/Proyecto/Front/PaginaAcerca.html
+++ b/Proyecto/Front/PaginaAcerca.html
@@ -74,8 +74,7 @@
           >
             <img
               src="img/ImgAcerca/imghistoria.jpg"
-              alt="Patient in clinic"
-              class="bienvenida rounded img-fluid"
+              class="historia rounded img-fluid"
             />
           </div>
           <div class="col-lg-6 col-md-12">
