Se agrego sección Misión

--- a/Proyecto/Front/PaginaAcerca.html
+++ b/Proyecto/Front/PaginaAcerca.html
@@ -98,6 +98,35 @@
     </section>
 
    
+    <section id="SeccionMision" class="SeccionMision py-4">
+      <h1 class="TituloSeccionMision">| Misión |</h1>
+      <div class="container">
+        <div class="row align-items-center">
+          <div
+            class="col-lg-6 col-md-12">
+              
+            <h2 class="SubtituloSeccionMision">
+               Sueño a Futuro
+            </h2>
+
+              <p>
+                Ser reconocidos como una clínica dental de referencia, 
+                destacando por nuestra calidad de atención, tecnología avanzada y enfoque 
+                en el bienestar del paciente. Aspiramos a crear una experiencia dental positiva 
+                y a contribuir activamente a la salud bucal de nuestra comunidad.
+              </p>
+  
+          </div>
+          <div class="col-lg-6 col-md-12">
+
+            <img
+            src="img/ImgAcerca/imgDentista2.webp"
+            class="Mision rounded img-fluid"
+          />
+          </div>
+        </div>
+      </div>
+    </section>
 
     <section id="SeccionEquipo" class="SeccionEquipo text-white">
       <div class="container">
