--- a/Proyecto/Front/PaginaAcerca.html
+++ b/Proyecto/Front/PaginaAcerca.html
@@ -128,6 +128,39 @@
       </div>
     </section>
 
+
+    <section id="SeccionVision" class="SeccionVision py-4">
+      <h1 class="TituloSeccionVision text-end">| Visión |</h1>
+      <div class="container">
+        <div class="row align-items-center">
+          <div
+            class="col-lg-6 col-md-12 mb-4 mb-lg-0 d-flex justify-content-center"
+          >
+            <img
+              src="img/ImgAcerca/imgDentista.jpg"
+              class="Vision rounded img-fluid"
+            />
+          </div>
+          <div class="col-lg-6 col-md-12">
+
+            <h2 class="SubtituloSeccionVision">
+              Nuestro Compromiso Diario
+            </h2>
+
+            <p>
+              Brindar atención odontológica integral y personalizada, enfocada en la 
+              prevención y tratamiento de enfermedades bucodentales. Nos comprometemos 
+              a ofrecer servicios de alta calidad, con un enfoque en la ética, el respeto
+              y la empatía hacia nuestros pacientes. Buscamos mejorar la salud dental 
+              de la comunidad y educar sobre la importancia de mantener una adecuada higiene oral.
+            </p>
+
+          </div>
+        </div>
+      </div>
+    </section>
+
+
     <section id="SeccionEquipo" class="SeccionEquipo text-white">
       <div class="container">
         <h2 class="tituloEquipo text-center">Personal Médico</h2>
