Cambio de texto de inglés a español

--- a/Proyecto/Front/PaginaAcerca.html
+++ b/Proyecto/Front/PaginaAcerca.html
@@ -78,19 +78,19 @@
             />
           </div>
           <div class="col-lg-6 col-md-12">
-            <h1 class="TituloSeccionHistoria">Our dental clinic has been founded in 2010.
-              The founder is an honorable alumni of NYC's Columbia medical school - Mark Hoffmann, MD.</h1>
+            <h1 class="TituloSeccionHistoria">Nuestra clínica dental se fundó en 2010. El fundador 
+              es un exalumno honorable de la facultad de medicina de Columbia de Nueva York: Mark Hoffmann, MD.</h1>
 
             <p>
-              After 8 previous years of practicing, he and his colleagues collaborated to found their own clinic. 
-                Coming from backgrounds of miscellaneous dental institutions of the US, they complement each other. 
-                Their common clinic became known as BeDentist!
-                The state of Pennsylvania highly appreciates our contribution to state's dental healthcare. 
-                Just as our local patients in the upstate Potter county of Pennsylvania.
+              Después de 8 años de práctica, él y sus colegas colaboraron para fundar su propia clínica. 
+              Provenientes de diversas instituciones dentales de los EE. UU., se complementan entre sí. 
+              ¡Su clínica común pasó a ser conocida como BeDentist! El estado de Pensilvania aprecia mucho 
+              nuestra contribución a la atención médica dental del estado. ¡En los últimos 6 años, nuestra 
+              clínica dental aumentó la lista de clientes recurrentes!
             </p>
 
             <h2 class="SubtituloSeccionHistoria">
-              We look forward to you becoming one of them as well!
+              ¡Esperamos que usted también se convierta en uno de ellos!
             </h2>
           </div>
         </div>
